[gd_scene load_steps=63 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Sprites/White.png" type="Texture" id=2]
[ext_resource path="res://Sprites/ShapesArea.png" type="Texture" id=3]
[ext_resource path="res://LevelData/LvData4.tres" type="Resource" id=4]
[ext_resource path="res://Scripts/MakeNext.gd" type="Script" id=5]
[ext_resource path="res://LevelData/LvData3.tres" type="Resource" id=6]
[ext_resource path="res://LevelData/LvData6.tres" type="Resource" id=7]
[ext_resource path="res://LevelData/LvData2.tres" type="Resource" id=8]
[ext_resource path="res://GeosansLight.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Sprites/EmptyArea.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Gradient.png" type="Texture" id=11]
[ext_resource path="res://LevelData/LvData5.tres" type="Resource" id=12]
[ext_resource path="res://LevelData/LvData7.tres" type="Resource" id=13]
[ext_resource path="res://LevelData/LvData8.tres" type="Resource" id=14]
[ext_resource path="res://LevelData/LvData9.tres" type="Resource" id=15]
[ext_resource path="res://LevelData/LvData10.tres" type="Resource" id=16]
[ext_resource path="res://LevelData/LvData11.tres" type="Resource" id=17]
[ext_resource path="res://LevelData/LvData14.tres" type="Resource" id=18]
[ext_resource path="res://LevelData/LvData16.tres" type="Resource" id=19]
[ext_resource path="res://LevelData/LvData12.tres" type="Resource" id=20]
[ext_resource path="res://LevelData/LvData13.tres" type="Resource" id=21]
[ext_resource path="res://LevelData/LvData18.tres" type="Resource" id=22]
[ext_resource path="res://LevelData/LvData19.tres" type="Resource" id=23]
[ext_resource path="res://LevelData/LvData20.tres" type="Resource" id=24]
[ext_resource path="res://LevelData/LvData21.tres" type="Resource" id=25]
[ext_resource path="res://LevelData/LvData22.tres" type="Resource" id=26]
[ext_resource path="res://LevelData/LvData17.tres" type="Resource" id=27]
[ext_resource path="res://LevelData/LvData15.tres" type="Resource" id=28]
[ext_resource path="res://LevelData/LvData23.tres" type="Resource" id=29]
[ext_resource path="res://LevelData/LvData24.tres" type="Resource" id=30]
[ext_resource path="res://LevelData/LvData25.tres" type="Resource" id=31]
[ext_resource path="res://Sprites/Gimmicks/Logo.png" type="Texture" id=32]
[ext_resource path="res://Scenes/BG.tscn" type="PackedScene" id=33]
[ext_resource path="res://Sounds/ClearLine.wav" type="AudioStream" id=34]
[ext_resource path="res://Sprites/Key.png" type="Texture" id=35]
[ext_resource path="res://Sprites/LongKey.png" type="Texture" id=36]
[ext_resource path="res://Sprites/Arrow.png" type="Texture" id=37]
[ext_resource path="res://Sounds/Undo.wav" type="AudioStream" id=38]
[ext_resource path="res://Sounds/Wrong.mp3" type="AudioStream" id=39]
[ext_resource path="res://Scripts/PlaySfx.gd" type="Script" id=40]
[ext_resource path="res://Sounds/Click.wav" type="AudioStream" id=41]
[ext_resource path="res://Sounds/Reset.wav" type="AudioStream" id=42]
[ext_resource path="res://Sounds/Drop.wav" type="AudioStream" id=43]
[ext_resource path="res://Sounds/Clear.wav" type="AudioStream" id=44]
[ext_resource path="res://LevelData/LvData1.tres" type="Resource" id=45]
[ext_resource path="res://Sprites/MedKey.png" type="Texture" id=47]

[sub_resource type="Animation" id=4]
resource_name = "LogoAnim"
length = 16.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Logo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4, 8, 12, 16 ),
"transitions": PoolRealArray( -2, -2, -2, -2, 1 ),
"update": 0,
"values": [ Vector2( 616, 366 ), Vector2( 616, 346 ), Vector2( 616, 366 ), Vector2( 616, 346 ), Vector2( 616, 366 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Logo:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 16 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Logo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 616, 366 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Logo:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../UI/Tuto/MovePiece:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.203922, 0.203922, 0.203922, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../UI/Tuto/Proceed:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=1]
size = 54
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=2]
size = 30
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=17]
size = 24
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=3]
size = 30
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=9]
size = 30
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=10]
size = 20
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=8]
size = 25
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=7]
size = 40
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="Animation" id=11]
resource_name = "ActiveState"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("UI/Tuto/MovePiece:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.00138778, 0.5 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Color( 0.211765, 0.211765, 0.211765, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UI/Tuto/Proceed:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.00138778, 0.5 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.211765, 0.211765, 0.211765, 1 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("UI/Tuto/MovePiece:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UI/Tuto/Proceed:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("UI/Tuto/Reset:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("UI/Tuto/Undo:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "WaitingState"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("UI/Tuto/MovePiece:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.00138778, 0.5 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.211765, 0.211765, 0.211765, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UI/Tuto/Proceed:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.00138778, 0.5 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Color( 0.211765, 0.211765, 0.211765, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "Clear"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Gamearea/BG:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.427451, 0.501961, 1, 1 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "MessedUp"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Gamearea/BG:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( -2, -2, -2, 1 ),
"update": 0,
"values": [ Color( 0.835294, 0.835294, 0.835294, 1 ), Color( 1, 0.419608, 0.419608, 1 ), Color( 0.835294, 0.835294, 0.835294, 1 ), Color( 1, 0.470588, 0.470588, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UI/Tuto/Undo:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("UI/Tuto/Reset:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("UI/Tuto/Undo:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.505882, 0.690196, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("UI/Tuto/Reset:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.505882, 0.690196, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("UI/Tuto/Proceed/Proceed2:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.211765, 0.211765, 0.211765, 1 ) ]
}

[sub_resource type="Animation" id=15]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("UI/Tuto/MovePiece:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.211765, 0.211765, 0.211765, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UI/Tuto/Proceed:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("UI/Tuto/Reset:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("UI/Tuto/Undo:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Gamearea/BG:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.835294, 0.835294, 0.835294, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("UI/Tuto/Undo:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("UI/Tuto/Reset:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="Main" type="Node2D"]
script = ExtResource( 1 )
lvData = [ ExtResource( 45 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 12 ), ExtResource( 7 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 18 ), ExtResource( 28 ), ExtResource( 19 ), ExtResource( 27 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ) ]

[node name="Gamearea" type="Node2D" parent="."]

[node name="BG" type="Sprite" parent="Gamearea"]
modulate = Color( 0.835294, 0.835294, 0.835294, 1 )
position = Vector2( 447, 30 )
scale = Vector2( 10.4063, 20.5313 )
z_index = -7
texture = ExtResource( 2 )
centered = false

[node name="ShapesArea2" type="Sprite" parent="Gamearea"]
modulate = Color( 0.113725, 0.113725, 0.117647, 1 )
position = Vector2( 449, 32 )
scale = Vector2( 1.02812, 1.02031 )
z_index = -6
texture = ExtResource( 3 )
centered = false

[node name="Gradient" type="Sprite" parent="Gamearea"]
modulate = Color( 1, 1, 1, 0.0980392 )
position = Vector2( 613.499, 358.605 )
scale = Vector2( 0.65789, 5.48507 )
z_index = -5
texture = ExtResource( 11 )

[node name="Logo" type="Sprite" parent="Gamearea"]
modulate = Color( 1, 1, 1, 0.0980392 )
self_modulate = Color( 0.341176, 0.341176, 0.341176, 1 )
position = Vector2( 616, 366 )
scale = Vector2( 0.6, 0.6 )
z_index = -4
texture = ExtResource( 32 )

[node name="LogoAnim" type="AnimationPlayer" parent="Gamearea"]
autoplay = "LogoAnim"
anims/LogoAnim = SubResource( 4 )
anims/RESET = SubResource( 5 )

[node name="ShapesArea" type="Sprite" parent="."]
position = Vector2( 454, 40 )
z_index = -1
texture = ExtResource( 10 )
centered = false

[node name="BG" parent="." instance=ExtResource( 33 )]

[node name="UI" type="Node2D" parent="."]

[node name="Lv" type="Label" parent="UI"]
margin_left = 64.0
margin_top = 32.0
margin_right = 154.0
margin_bottom = 58.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Level 1"

[node name="Title" type="Label" parent="UI"]
margin_left = 67.0
margin_top = 82.0
margin_right = 147.0
margin_bottom = 118.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_x = 0
custom_fonts/font = SubResource( 2 )
text = "Title"
valign = 1

[node name="Completed" type="Label" parent="UI"]
margin_left = 67.0
margin_top = 112.0
margin_right = 147.0
margin_bottom = 148.0
custom_colors/font_color = Color( 0.513726, 0.607843, 1, 1 )
custom_constants/shadow_offset_x = 0
custom_fonts/font = SubResource( 17 )
text = "Completed!"
valign = 1

[node name="TextureRect" type="TextureRect" parent="UI"]
margin_right = 416.0
margin_bottom = 704.0

[node name="Label" type="Label" parent="UI/TextureRect"]
margin_left = 158.0
margin_top = 157.0
margin_right = 286.0
margin_bottom = 191.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "Up next:"
align = 1
valign = 1

[node name="GridContainer" type="GridContainer" parent="UI/TextureRect"]
margin_left = 84.0
margin_top = 225.0
margin_right = 374.0
margin_bottom = 689.0
custom_constants/vseparation = 15
custom_constants/hseparation = 15
columns = 3
script = ExtResource( 5 )

[node name="Tuto" type="Node2D" parent="UI"]

[node name="MovePiece" type="Node2D" parent="UI/Tuto"]
modulate = Color( 0.211765, 0.211765, 0.211765, 1 )
position = Vector2( 1000, 170 )

[node name="Rotate" type="Node2D" parent="UI/Tuto/MovePiece"]
position = Vector2( -3, -42 )

[node name="Sprite" type="Sprite" parent="UI/Tuto/MovePiece/Rotate"]
position = Vector2( 1, 0 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 35 )

[node name="Desc" type="Label" parent="UI/Tuto/MovePiece/Rotate"]
margin_left = -35.0
margin_top = -59.0
margin_right = 38.0
margin_bottom = -25.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
text = "Rotate"

[node name="Key" type="Sprite" parent="UI/Tuto/MovePiece/Rotate"]
position = Vector2( 1.59998, 0 )
scale = Vector2( 0.36, 0.36 )
texture = ExtResource( 37 )

[node name="MoveLeft" type="Node2D" parent="UI/Tuto/MovePiece"]
position = Vector2( -50, 6 )

[node name="Sprite" type="Sprite" parent="UI/Tuto/MovePiece/MoveLeft"]
position = Vector2( 1, 0 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 35 )

[node name="Desc" type="Label" parent="UI/Tuto/MovePiece/MoveLeft"]
margin_left = -138.0
margin_top = -17.0
margin_right = -25.0
margin_bottom = 17.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
text = "Move Left"

[node name="Key" type="Sprite" parent="UI/Tuto/MovePiece/MoveLeft"]
position = Vector2( 1.59998, 0 )
rotation = -1.5708
scale = Vector2( 0.36, 0.36 )
texture = ExtResource( 37 )

[node name="MoveRight" type="Node2D" parent="UI/Tuto/MovePiece"]
position = Vector2( 44, 7 )

[node name="Sprite" type="Sprite" parent="UI/Tuto/MovePiece/MoveRight"]
position = Vector2( 1, 0 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 35 )

[node name="Desc" type="Label" parent="UI/Tuto/MovePiece/MoveRight"]
margin_left = 29.0
margin_top = -15.0
margin_right = 161.0
margin_bottom = 19.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
text = "Move Right"

[node name="Key" type="Sprite" parent="UI/Tuto/MovePiece/MoveRight"]
position = Vector2( 1.59998, 0 )
rotation = 1.5708
scale = Vector2( 0.36, 0.36 )
texture = ExtResource( 37 )

[node name="Drop" type="Node2D" parent="UI/Tuto/MovePiece"]
position = Vector2( -3, 6 )

[node name="Sprite" type="Sprite" parent="UI/Tuto/MovePiece/Drop"]
position = Vector2( 1, 0 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 35 )

[node name="Desc" type="Label" parent="UI/Tuto/MovePiece/Drop"]
margin_left = -27.0
margin_top = 26.0
margin_right = 32.0
margin_bottom = 60.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
text = "Drop"

[node name="ExtraDesc" type="Label" parent="UI/Tuto/MovePiece/Drop"]
margin_left = -72.0
margin_top = 66.0
margin_right = 83.0
margin_bottom = 89.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 10 )
text = "(Hold to drop faster)"

[node name="Key" type="Sprite" parent="UI/Tuto/MovePiece/Drop"]
position = Vector2( 1.59998, 0 )
rotation = 3.14159
scale = Vector2( 0.36, 0.36 )
texture = ExtResource( 37 )

[node name="HardDrop" type="Node2D" parent="UI/Tuto/MovePiece"]
position = Vector2( -64, 127 )

[node name="Sprite" type="Sprite" parent="UI/Tuto/MovePiece/HardDrop"]
position = Vector2( 1, 0 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 35 )

[node name="Desc" type="Label" parent="UI/Tuto/MovePiece/HardDrop"]
margin_left = 26.0
margin_top = -16.0
margin_right = 85.0
margin_bottom = 18.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
text = "Hard Drop"

[node name="Key" type="Label" parent="UI/Tuto/MovePiece/HardDrop"]
margin_left = -8.0
margin_top = -13.0
margin_right = 53.0
margin_bottom = 15.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 8 )
text = "C"

[node name="Proceed" type="Node2D" parent="UI/Tuto"]
position = Vector2( 978, 384 )

[node name="Proceed2" type="Node2D" parent="UI/Tuto/Proceed"]

[node name="Sprite" type="Sprite" parent="UI/Tuto/Proceed/Proceed2"]
position = Vector2( -48, 2 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 36 )

[node name="Desc" type="Label" parent="UI/Tuto/Proceed/Proceed2"]
margin_left = 27.0
margin_top = -23.0
margin_right = 149.0
margin_bottom = 22.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 7 )
text = "Proceed"

[node name="Key" type="Label" parent="UI/Tuto/Proceed/Proceed2"]
margin_left = -81.0
margin_top = -12.0
margin_right = -20.0
margin_bottom = 16.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 8 )
text = "Space"

[node name="Undo" type="Node2D" parent="UI/Tuto"]
position = Vector2( 985, 485 )

[node name="Sprite" type="Sprite" parent="UI/Tuto/Undo"]
position = Vector2( -40.8, 0 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 35 )

[node name="Desc" type="Label" parent="UI/Tuto/Undo"]
margin_left = -13.8
margin_top = -23.0
margin_right = 64.2
margin_bottom = 22.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 7 )
text = "Undo"

[node name="Key" type="Label" parent="UI/Tuto/Undo"]
margin_left = -48.8
margin_top = -14.0
margin_right = -34.8
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 8 )
text = "Z"

[node name="Reset" type="Node2D" parent="UI/Tuto"]
position = Vector2( 985, 540 )

[node name="Sprite" type="Sprite" parent="UI/Tuto/Reset"]
position = Vector2( -40.8, 0 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 35 )

[node name="Desc" type="Label" parent="UI/Tuto/Reset"]
margin_left = -13.8
margin_top = -23.0
margin_right = 64.2
margin_bottom = 22.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 7 )
text = "Reset"

[node name="Key" type="Label" parent="UI/Tuto/Reset"]
margin_left = -47.8
margin_top = -14.0
margin_right = -35.8
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 8 )
text = "R"

[node name="Back" type="Node2D" parent="UI/Tuto"]
position = Vector2( 990, 639 )

[node name="Sprite" type="Sprite" parent="UI/Tuto/Back"]
position = Vector2( -49.2, 0 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 47 )

[node name="Desc" type="Label" parent="UI/Tuto/Back"]
margin_left = -11.2
margin_top = -24.0
margin_right = 110.8
margin_bottom = 21.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 7 )
text = "Back"

[node name="Key" type="Label" parent="UI/Tuto/Back"]
margin_left = -65.2
margin_top = -14.0
margin_right = -4.20001
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 8 )
text = "Esc"

[node name="Sounds" type="Node2D" parent="."]

[node name="SfxUndo" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 38 )
volume_db = 3.0

[node name="SfxClearLine" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 34 )
volume_db = -3.178
pitch_scale = 1.3
script = ExtResource( 40 )
funcName = "clear_line"

[node name="SfxClear" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 44 )
volume_db = -6.0
pitch_scale = 1.05

[node name="SfxMessedUp" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 39 )
volume_db = 3.0
pitch_scale = 1.1

[node name="SfxDrop" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 43 )
volume_db = -2.0
pitch_scale = 1.7

[node name="SfxReset" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 42 )
volume_db = 3.0

[node name="SfxClick" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 41 )
volume_db = -7.5

[node name="SfxWrong" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 39 )
script = ExtResource( 40 )
funcName = "cant_rotate"

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
zoom = Vector2( 1.2, 1.2 )

[node name="TutoAnim" type="AnimationPlayer" parent="."]
anims/ActiveState = SubResource( 11 )
anims/RESET = SubResource( 12 )
anims/WaitingState = SubResource( 13 )

[node name="ClearStateAnim" type="AnimationPlayer" parent="."]
anims/Clear = SubResource( 16 )
anims/MessedUp = SubResource( 14 )
anims/RESET = SubResource( 15 )

[connection signal="curPieceChanged" from="." to="UI/TextureRect/GridContainer" method="_on_Main_curPieceChanged"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
